# ASPIRA---AI

./: .env  .gitignore  README.md  Version 2  alembic.ini  aspira_ai_db.db  aspira_ai_db.db-shm  aspira_ai_db.db-wal  makefile.txt  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 6ba9bb494894_add_resumes_jobs_embeddings_tables.py  fafe85873074_add_skills_column_to_jobs.py
app/: app.py  main.py  semantic_app.py  streamlit_app.py  streamlit_skills.py
app/api/: career_routes.py  job_routes.py  nlp_routes.py  recommend_routes.py  routes.py  survey_routes.py
app/auth/: jwt.py
app/core/: config.py
app/db/: base.py  models_extra.py  seed.py  session.py
app/models/: career.py  survey.py  user.py
app/nlp/: embeddings.py  extractors.py  normalizer.py
app/schemas/: survey.py  user.py
data/features/: training_view.parquet
data/reference/: role_crosswalk.csv  role_crosswalk_final.csv  role_crosswalk_suggested.csv  role_crosswalk_with_suggestions.csv
data/responses/: responses_clean.csv  responses_long.parquet  (+1 more)
models/: kmeans.pkl  knn_index.pkl  role_centroids.parquet  role_trait_centroids.parquet
notebooks/: persona_integration.ipynb
scripts/: Plotly Visual Responses.py  apply_crosswalk_fixes.py  attach_traits_to_training_view.py  build_role_centroids.py  build_role_trait_centroids.py  clean_trait_centroids.py  make_role_crosswalk_seed.py  materialize.py  onet_autosuggest_crosswalk.py  onet_traits_min.py  query_hybrid.py  query_knn.py  query_roles.py  rebuild_centroids_strict.py  reembed_text.py  so_to_curated.py
src/common/: text.py
(+41 files in other folders)
