[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "careerpath-ai"
version = "0.0.1"
description = "CareerPath AI training pipeline"
authors = [{name="Team CareerPath AI"}]
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0",
  "tqdm>=4.66.0",
  "sentence-transformers>=3.0.0",
  "faiss-cpu>=1.8.0",
  "matplotlib>=3.8.0"
]

[tool.setuptools.packages.find]
where = ["src"]
